Ingress/dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jay-deployment

spec:
  replicas: 3
  selector:
     matchLabels:
       tier: frontend

  template:
   metadata:
     labels:
      tier: frontend
   spec:
    containers:
    - name: nginx
      image: nginx:1.20
      ports:
       - containerPort: 80
