Ingress/web-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: myservice

spec:
  selector:
    tier: frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30080
  type: NodePort
